2015-10-04  Per Bothner  <per@bothner.com>

	* ModuleInfo.java (setupModuleExp): Only use current value as
	literal if field is final.

2015-09-30  Per Bothner  <per@bothner.com>

	* Compilation.java (mangleSymbolic): Fix thinko.
	* ModuleManager.java (interactiveClassPrefix, evalClassPrefix):
	Change to values that don't get mangled by mangleSymbolic.

2015-09-30  Per Bothner  <per@bothner.com>

	Change to mangle class and package name in "Symbolic Freedom" style.
	See https://blogs.oracle.com/jrose/entry/symbolic_freedom_in_the_vm
	Note this is currently *only* used for class and package names.
	* Compilation.java (mangleSymbolic, demangleSymbolic): New methods.
	(mangleClassName, mangleQualifiedName): Change to use new methods.
	(generateClassName): Use mangleClassName.
	* ClassExp.java: Use mangleClassName.

2015-09-29  Per Bothner  <per@bothner.com>

	* Declaration.java (load): Add cast if loading from Location.
	* ReferenceExp.java (calculateType): More precise result if fluid.

2015-09-28  Per Bothner  <per@bothner.com>

	* Declaration.java (makeField): Better field type if indirect-binding.

2015-09-20  Per Bothner  <per@bothner.com>

	* Declaration.java (SYNCHRONIZED_ACCESS, STRICTFP_ACCESS): New flags.
	(METHOD_ACCESS_FLAGS): Include new flags.

2015-09-17  Per Bothner  <per@bothner.com>

	Fix bug in class name mangling; modularize.
	* Compilation.java (mangleClassName, mangleQualifiedName): New methods.
	* ModuleExp.java (classFor):  Avoid mangling module name - only
	mangle class name, using mangleQualifiedName.

2015-07-22  Per Bothner  <per@bothner.com>

	* ConsumerTarget.java (compileFromStack): Better handling of
	unsigned integer types.

2015-07-17  Per Bothner  <per@bothner.com>

	Use an explicit flag to mark a LetExp created for a <body>.
	* LetExp.java (IS_BODY_SCOPE): New constant.

2015-07-15  Per Bothner  <per@bothner.com>

	* Compilation.java (process): Complain if both --module-static-run
	and -main (or equivalent) are both specified.
